--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@ data-ad-height = "100"></ins>
         </div>
 </div>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5518286275541660"
+     crossorigin="anonymous"></script>
+
 
     <script>
         function getNum() {
