--- a/index.html
+++ b/index.html
@@ -101,27 +101,32 @@ data-ad-height = "100"></ins>
         <div class="btn_wrap">
             <input class="btn" type="button" value="추첨하기" onclick="getNum()">
         </div>
-    </container>
 
         <div class="news_banner">
             <a href="http://m.newspic.kr/view.html?nid=2022111402342865451&pn=600&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111402342865451&utm_source=np211229Q0zJw89T"
                 target="_blank">"로또 20억 당첨된 아저씨"</a>
             <a href="http://m.newspic.kr/view.html?nid=2022111322400115040&pn=571&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111322400115040&utm_source=np211229Q0zJw89T"
-                target="_blank">"1041회 로또 1등당첨 근황"</a>
+                target="_blank">"1041회 로또 1등당첨 근황"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022111401162642041&pn=596&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111401162642041&utm_source=np211229Q0zJw89T"
-                target="_blank">"20세 때 로또1등 당첨된 청년 근황"</a>
+                target="_blank">"20세 때 로또1등 당첨된 청년 근황"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022111312115312230&pn=304&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111312115312230&utm_source=np211229Q0zJw89T"
-                target="_blank">"로또 1등 당첨 된 대학생 1년 반 뒤 후기"</a>
+                target="_blank">"로또 1등 당첨 된 대학생 1년 반 뒤 후기"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022111301200189102&pn=571&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111301200189102&utm_source=np211229Q0zJw89T"
-                target="_blank">"로또 당첨 판매점 중복 당첨 많음+2등 추가"</a> <br><br>
+                target="_blank">"로또 당첨 판매점 중복 당첨 많음+2등 추가"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022111215574712410&pn=596&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111215574712410&utm_source=np211229Q0zJw89T"
-                target="_blank">"로또 당첨자가 제일 많이 하는 고민"</a>
+                target="_blank">"로또 당첨자가 제일 많이 하는 고민"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022111107350236693&pn=573&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022111107350236693&utm_source=np211229Q0zJw89T"
-                target="_blank">"대한민국 로또 당첨자 중 레전드 1등"</a>
+                target="_blank">"대한민국 로또 당첨자 중 레전드 1등"</a><br>
             <a href="http://m.newspic.kr/view.html?nid=2022110917000005799&pn=137&cp=Q0zJw89T&utm_medium=affiliate&utm_campaign=2022110917000005799&utm_source=np211229Q0zJw89T"
-                target="_blank">"로또사면 꼭! 하는 말"</a>
+                target="_blank">"로또사면 꼭! 하는 말"</a><br>
         </div>
+
+    </container>
+
+        
 </div>
+
+
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5518286275541660"
      crossorigin="anonymous"></script>
